Fix scrollbar on readonly auto-sized textarea

--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -61,3 +61,9 @@ main {
     }
   }
 }
+
+
+// Remove scrollbar from readonly auto-sized mat-input
+textarea[matInput][readonly][cdkTextareaAutosize] {
+  overflow: hidden;
+}
